[metadata]
name = crontab-doctor
version = 0.1.0
author = crontab-doctor contributors
description = A CLI tool that audits and validates crontab expressions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = .

[options.packages.find]
where = .
include = crontab_doctor*

[options.entry_points]
console_scripts =
    crontab-doctor = crontab_doctor.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0

[tool:pytest]
testpaths = tests
addopts = --tb=short -q

[flake8]
max-line-length = 100
exclude = .git,__pycache__,*.egg-info
